# seal

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
.claude/: launch.json
.claude/skills/seal-best-practices/: SKILL.md
.github/workflows/: coverage.yml  release.yml
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: Makefile  README.md  seal.epub
docs/latex/: seal.tex
docs/latex/chapters/: 01-introduction.tex  02-architecture.tex  03-configuration.tex  04-database.tex  05-http-api.tex  06-websocket.tex  07-encryption-security.tex  08-source-reference.tex  09-testing.tex  10-build-deploy.tex  11-object-storage.tex
scripts/: bots.py  bundle-sodium.sh  deploy-digitalocean.sh
src/: auth.rs  config.rs  db.rs  db_ops.rs  error.rs  lib.rs  main.rs  models.rs  rate_limit.rs  validate.rs  ws.rs
src/routes/: attachments.rs  auth.rs  channels.rs  health.rs  messages.rs  mod.rs  users.rs  ws.rs
static/: app.js  crypto.js  style.css
templates/: index.html
tests/: auth.rs  channels.rs  health.rs  messages.rs  migration.rs  object_storage.rs  static_assets.rs  users.rs  websocket.rs
tests/common/: mod.rs
