[package]
name = "seal-server"
version = "0.1.0"
edition = "2021"
description = "End-to-end encrypted chat server (Rust port of FastAPI app)"

[[bin]]
name = "seal-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.13"
dotenvy = "0.15"

bcrypt = "0.19"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

lancedb = "0.30"
arrow-array = "58"

uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
anyhow = "1"
futures-util = "0.3"
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tempfile = "3"
