[package]
name = "e2e-chat-desktop"
version = "0.1.0"
description = "E2E Encrypted Chat - Desktop Client"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
